# AP

./: hello.hs
Week1/a1-handout/src/APL/: AST.hs  AST_Tests.hs  Eval.hs  Eval_Tests.hs
Week1/handout/src/APL/: AST.hs  Eval.hs  Eval_Tests.hs
Week3/a3-handout/src/APL/: Parser.hs  Parser_Tests.hs
Week3/solution_jona2/: apl.hs  test.hs
Week3/solution_jona2/src/APL/: Parser.hs  Parser_Tests.hs  Parser_pre_4.hs  t2.txt
Week4/a4-assignment/: a4.cabal
Week4/a4-assignment/src/APL/: Eval.hs  InterpIO.hs  InterpPure.hs  Interp_Tests.hs  Monad.hs
Week5/a5-handout/: .gitignore
Week5/a5-handout/src/APL/: AST.hs  Parser.hs  Tests.hs
Week6/a6-handout/src/: SPC.hs  SPC_Tests.hs
Week6/src/: SPC.hs  SPC_Tests.hs
a5/a5-handout/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
a5/a5-handout/dist-newstyle/packagedb/ghc-9.4.8/: a5-1.0.0.0-inplace.conf  package.cache
a5/a5-handout/src/APL/: Tests.hs
week2/a2-handout/src/APL/: AST.hs  Check.hs  Check_Tests.hs  Eval.hs  Eval_Tests.hs
week2/handout/src/APL/: Eval.hs
